# django-filer

./: .coverage  .coveragerc  .editorconfig  .gitignore  .hgignore  .jshintrc  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  .travis_setup  AUTHORS  CHANGELOG.rst  CHANGELOG.txt  HISTORY  LICENSE  LICENSE-filer.txt  LICENSE-finder.txt  LICENSE.txt  LICENSES  MANIFEST.in  README  README-Finder.md  README-filer.rst  README.rst  addon.json  aldryn_config.py  buildout.cfg  changes.diff  cms_helper.py  coverage.rc  design-notes.md  eslint.config.js  eslint.config.mjs  gulpfile.js  package-lock.json  package.json  pyproject.toml  pytest-results.xml  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  docs.yml  frontend.yml  lint.yml  pre-commit.ci.yaml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml  unit-tests.yml  unittests.yml
.tx/: config
client/: .editorconfig  Droppable.tsx  FileAdmin.tsx  FileUploader.tsx  FolderAdmin.tsx  FolderTabs.tsx  Inode.tsx  InodeList.tsx  Item.tsx  MenuBar.tsx  Search.tsx  SelectableArea.tsx  adminbuild.config.mjs  browserbuild.config.mjs  declaration.d.ts  esbuild.cjs  esbuild.config.mjs  file-admin.tsx  finder-admin.scss  finder-browser.scss  finder-browser.ts  finder-select.ts  folder-admin.tsx  loader.tsx  sass.config.mjs
client/admin/: ControlButtons.tsx  Dialog.tsx  DraggedInodes.tsx  DroppableArea.tsx  FileAdmin.tsx  FileDetails.tsx  FinderSettings.ts  FolderAdmin.tsx  FolderTabs.tsx  GalleryPreview.tsx  InodeList.tsx  Item.tsx  LabelEditor.tsx  MenuBar.tsx  PermissionDialog.tsx  PermissionEditor.tsx  SearchField.tsx  SelectableArea.tsx  TagEditor.tsx  constants.ts
client/browser/: BrowserEditor.tsx  FileSelectDialog.tsx  FinderFileSelect.tsx  FinderFolderSelect.tsx  FolderStructure.tsx  Menu.tsx  MenuBar.tsx
client/common/: DropDownMenu.tsx  FigureLabels.tsx  FileTags.tsx  FileUploader.tsx  FilterByLabel.tsx  FilterByTag.tsx  MutationObserver.ts  SelectLabels.tsx  SelectTags.tsx  SortingOptions.tsx  Storage.ts  Tooltip.tsx  UploadProgress.tsx  VolumeControl.tsx
client/components/: Audio.tsx  Common.tsx  Image.tsx
client/contrib/: Image.tsx
client/finder/: ControlButtons.tsx  DraggedInodes.tsx  DropDownMenu.tsx  FileAdmin.tsx  FileDetails.tsx  FileUploader.tsx  FinderSettings.ts  FolderAdmin.tsx  FolderTabs.tsx  InodeList.tsx  Item.tsx  MenuBar.tsx  Search.tsx  SearchField.tsx  SelectLabels.tsx  SelectableArea.tsx  Storage.ts  UploadProgress.tsx
client/scss/: _colors.scss  _dialog.scss  _downshift.scss  _dropdown.scss  _labels.scss  _menubar.scss  _progress.scss  _tooltip.scss  _volume-control.scss  finder-admin.scss  finder-browser.scss  finder-select.scss
demoapp/: admin_site.py  manage.py  models.py  pytest.ini  settings.py  urls.py  utils.py  views.py  wsgi.py
demoapp/e2etests/: conftest.py
demoapp/migrations/: 0001_initial.py
demoapp/templates/: demoapp.html
demoapp/unittests/: conftest.py  test_folder_admin.py
docs/: Makefile  README.rst  conf.py  conf.py.bak  development.rst  dump_payload.rst  extending_filer.rst  getting_started.rst  index.rst  installation.rst  make.bat  management_commands.rst  permissions.rst  requirements.in  requirements.txt  running_tests.rst  secure_downloads.rst  server.rst  settings.rst  static_server.rst  upgrading.rst  usage.rst  validation.rst
filer/: __init__.py  apps.py  cache.py  context_processors.py  image_effects.py  managers.py  server.py  settings.py  signals.py  storage.py  tasks.py  test_settings.py  test_urls.py  testsettings.py  testurls.py  thumbnail_processors.py  urls.py  validation.py  validators.py  views.py
filer/admin/: __init__.py  archiveadmin.py  clipboardadmin.py  common_admin.py  fileadmin.py  folderadmin.py  folderadmin.py.rej  forms.py  helper.py  imageadmin.py  permissionadmin.py  permissions.py  thumbnailoptionadmin.py  tools.py  trashadmin.py  upload.py  videoadmin.py  views.py
filer/fields/: file.py  folder.py  image.py  multistorage_file.py  permission_set.py  video.py
filer/locale/: README
filer/middleware/: __init__.py  set_state.py
filer/migrations/: 0001_initial.py  0001_squashed_0016_alter_folder_index_together_remove_folder_level_and_more.py  0002_auto_20150604_1722.py  0002_auto_20150606_2003.py  0002_auto_20150928_1109.py  0002_rename_file_field.py  0003_delete_duplicate_clipboards.py  0003_thumbnailoption.py  0004_auto_20160328_1434.py  0004_unique_clipboard_per_user.py  0005_auto_20160429_1025.py  0005_auto_20160621_1427.py  0005_auto_20160623_1425.py  0005_auto__add_field_file_sha1__chg_field_file_file.py  0005_default_alt_text_size.py  0006_auto_20160622_1013.py  0006_auto_20160623_1627.py  0007_filer_file_size.py  (+48 more)
finder/: __init__.py  apps.py  exceptions.py  lookups.py  settings.py  storage.py  storages.py
test_requirements/: base.txt  django-1.10.txt  django-1.11.txt  django-1.5.txt  django-1.6.txt  django-1.7.txt  django-1.8.txt  django-1.9.txt  django-2.0.txt  django-2.1.txt  django-master.txt
testapp/: admin_site.py  asgi.py  middleware.py  models.py  settings.py  urls.py  views.py  wsgi.py
tests/: .coveragerc  buildout.cfg  clear.sh  django-124.cfg  django-125.cfg  django-13.cfg  django-all.cfg  django-trunk.cfg  helpers.py  settings.py  test_admin.py  test_admin_forms.py  test_admin_tools.py  test_compatibility.py  test_dump.py  test_filer_check.py  test_filer_easy_thumbnails.py  test_filer_image_tags.py  test_filer_tags.py  test_files.py  test_form_fields.py  test_generate_filename.py  test_imagemodels.py  test_loader.py  test_management_commands.py  test_migrations.py  test_models.py  test_models_extras.py  test_models_tools.py  test_permission_cache.py  test_permissions.py  test_pil_exif.py  test_recursive_dictionary.py  test_server_backends.py  test_server_views.py  test_thumbnail_processors.py  test_thumbnails.py  test_tools.py  test_utils.py  test_validation.py  (+2 more)
unittests/: conftest.py  extra_tests.py  settings.py  test_file_admin.py  test_folder_admin.py  test_image_admin.py  test_image_png.py  test_inode_admin.py  test_inode_model.py  urls.py
(+598 files in other folders)
