[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-filer"
dynamic = ["version"]
authors = [
    {name = "Divio AG", email = "info@divio.ch"},
]
maintainers = [
    {name = "Django CMS Association and contributors", email = "info@django-cms.org"},
]
description = "A file management application for django that makes handling of files and images a breeze."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
cte = ["django-cte"]
heif = ["pillow-heif"]
audio = ["ffmpeg-python", "django-entangled"]
image = ["Pillow", "django-entangled"]
svg = ["reportlab", "svglib", "django-entangled"]
video = ["ffmpeg-python", "django-entangled"]
s3 = ["django-storages[s3]"]

[project.urls]
Homepage = "https://github.com/django-cms/django-filer"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["filer*", "finder*", "LICENSE"]

[tool.setuptools.package-data]
"*" = [
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*",
    "*.po",
    "*.mo",
]

[tool.setuptools.dynamic]
version = {attr = "finder.__version__"}

[tool.flake8]
max-line-length = 119
exclude = [
    "*.egg-info",
    ".eggs",
    ".env",
    ".git",
    ".settings",
    ".tox",
    ".venv",
    "build",
    "data",
    "dist",
    "docs",
    "*migrations*",
    "tmp",
    "node_modules",
]
ignore = ["E251", "E128", "E501", "W503"]

[tool.isort]
line_length = 119
skip = [
    "manage.py",
    "*migrations*",
    ".tox",
    ".eggs",
    "data",
    ".env",
    ".venv",
]
include_trailing_comma = true
multi_line_output = 5
lines_after_imports = 2
default_section = "THIRDPARTY"
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "CMS",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_first_party = ["filer"]
known_cms = ["cms", "menus"]
known_django = ["django"]

[tool.ruff]
src = ["finder", "filer"]
exclude = ["*/migrations/*"]
